# FINALTRACKERAI

./: CMakeLists.txt  README.md
bsp/: esp32s3_board.h
components/ble/: CMakeLists.txt
components/ble/include/: ble.h
components/ble/src/: ble.c
components/can/: CMakeLists.txt
components/can/include/: can.h
components/can/src/: can.c
components/controller/: CMakeLists.txt
components/controller/include/: controller.h
components/controller/src/: controller.c
components/feature/geofence/: CMakeLists.txt
components/feature/geofence/include/: geofence.h
components/feature/geofence/src/: geofence.c
components/feature/harsh_event/: CMakeLists.txt
components/feature/harsh_event/include/: harsh_event.h
components/feature/harsh_event/src/: harsh_event.c
components/feature/odometer/: CMakeLists.txt
components/gps/: CMakeLists.txt
components/gps/include/: gps.h  gps_startup.h
components/gps/src/: gps.c  gps_nmea_parser.c  gps_startup.c
components/gsm/: CMakeLists.txt
components/gsm/include/: gsm.h
components/gsm/src/: gsm.c
components/production/: CMakeLists.txt
components/production/include/: production.h
components/production/src/: production.c
components/sensors/accelerometer/: CMakeLists.txt
components/sensors/one_wire/: CMakeLists.txt
components/utils/: CMakeLists.txt
components/utils/include/: utils.h
components/utils/src/: utils.c
components/webfota/: CMakeLists.txt
components/webfota/include/: webfota.h
components/webfota/src/: webfota.c
include/: project_config.h
main/: main.c
(+6 files in other folders)
